User Count and Alert
Displays the amount of users attending a Meetup and displays an alert if
no Meetup with the supplied ID exists.

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,15 @@ h1 { color: #ffffff }
     color: #000000;
 }
 
+.alert {
+    border-radius: 0 !important;
+}
+
 /* Nav Bar Colors */
+.navbar {
+    margin-bottom: 0;
+}
+
 .navbar-default {
     background-color: #00897b;
     border-color: #4ebaaa;
